2015-11-27  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amindex.c (getstatefname): New functionto return the name
	  of the state file
	* server-src/amindex.h (getstatefname): Add prototype
	* perl/Amanda/Logfile.swg: swig getstatefname
	* perl/Amanda/Extract.pm: Get the state file name as argument
	* perl/Amanda/FetchDump/Application.pm (transmit_state_file):
	  Uncompress de state file is required
	* perl/Amanda/FetchDump/ClientApplication.pm: Use getstatefname and
	  some fix
	* perl/Amanda/Restore.pm: Call start_read_dar after
	  notify_start_backup
	* perl/Amanda/Service/Amidxtaped.pm: Use getstatefname
	* perl/Amanda/Service/Restore.pm (transmit_dar): Fix

2015-11-26  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/amanda.h: Remove define of _LARGEFILE64_SOURCE

2015-11-25  Jean-Louis Martineau <martineau@zmanda.com>
	* config/amanda/syshacks.m4: Define _XOPEN_SOURCE and
	  _XOPEN_SOURCE_EXTENDED on solaris to get correct type for
	  'struct iovec'

2015-11-25  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Report/human.pm: Fix crash if orig_size == 0

2015-11-25  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Makefile.am: Install perl/Amanda/FetchDump files

2015-11-25  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Extract.pm: Correctly check if program_path is an
	  Amanda::Message

2015-11-25  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Service/Restore.pm: Remove unused code

2015-11-25  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/conffile.c: Log which conffile is read

2015-11-25  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Makefile.am: Typo

2015-11-25  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Util.swg: swig quote_string_always

2015-11-25  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Rest/Runs.pm: Use new FetchDump API

2015-11-25  Jean-Louis Martineau <martineau@zmanda.com>